# django-insight-ui

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  logging_config.py  main.py  main_prompt.md  manage.py  mkdocs.yml  playwright.config.py  preparation.md  pyproject.toml  pytest.ini  pytest_standalone.ini  tailwind.config.js  test_theme_toggle.py
core/: __init__.py  context_processor.py  settings.py  test_templatetags.py  urls.py
core/templates/: index.html
docs/: accessibility.md  api-reference.md  contributing.md  customization.md  i18n.md  index.md  installation.md  quickstart.md  template-tags.md
docs/components/: alert.md  index.md  navbar.md
insight_ui/: __init__.py  apps.py  config.py  run_ui_tests.py  urls.py  views.py
insight_ui/locale/ar/LC_MESSAGES/: django.po
insight_ui/locale/de/LC_MESSAGES/: django.po
insight_ui/locale/en/LC_MESSAGES/: django.po
insight_ui/locale/es/LC_MESSAGES/: django.po
insight_ui/locale/fr/LC_MESSAGES/: django.po
insight_ui/locale/zh/LC_MESSAGES/: django.po
insight_ui/static/insight_ui/css/: input.css  insight-ui-rtl.css  insight-ui.css  tailwind.css
insight_ui/static/insight_ui/favicon/: site.webmanifest
insight_ui/static/insight_ui/js/: htmx-extensions.js  insight-ui-alert.js  insight-ui-carousel.js  insight-ui-dropdown.js  insight-ui-form.js  insight-ui-htmx-extensions.js  insight-ui-init.js  insight-ui-language.js  insight-ui-modal.js  insight-ui-navbar.js  insight-ui-select-language.js  insight-ui-sidebar.js  insight-ui-storybook.js  insight-ui-theme-toggle.js  insight-ui-utils.js  insight-ui-websocket.js  insight-ui.js
insight_ui/templates/insight_ui/: base.html  card_view.html  csrf_setup.html  login.html  page1.html  page2.html  storybook.html  table_view.html
insight_ui/templates/insight_ui/components/: alert.html  breadcrumbs.html  card.html  carousel.html  code_block.html  demo_sections.html  footer.html  form.html  form_errors.html  form_success.html  htmx_loading_indicator.html  infinite_scroll.html  infinite_scroll_items.html  inputs.html  language.html  language_selector.html  left_sidebar.html  list_partial.html  live_content.html  live_content_partial.html  modal.html  navbar.html  right_sidebar.html  searchbar.html  selector_language.html  sidebar.html  sidebar_right.html  storybook.html  table.html  theme_toggle.html  toggle-view-cards.html  toggle-view.html  toggle_language.html  toggle_theme.html  toggle_view.html  toggle_view_cards.html  toggle_view_table.html  user_dropdown.html  websocket.html
insight_ui/templates/insight_ui/components/cards/: card.html  horizontale_card.html
insight_ui/templates/insight_ui/components/carousels/: card_carousel.html  image_carousel.html
insight_ui/templates/insight_ui/components/modals/: modal_confirm.html  modal_delete.html  modal_demo.html  modal_error.html  modal_info.html  modal_success.html  modal_warning.html
insight_ui/templatetags/: __init__.py  insight_tags.py
insight_ui/tests/: __init__.py  test_template_tags.py  test_ui.py
src/: input.css
staticfiles/insight_ui/css/: insight-ui-rtl.css
tests/: __init__.py  settings.py  test_playwright_standalone.py  test_templatetags.py  test_ui_playwright.py  urls.py
tests/templates/: index.html
tests/templatetags/: __init__.py  test_insight_tags.py
tests/ui/: __init__.py  test_theme_toggle.py
utils/: README.md  main.py  pyproject.toml  test.py
