[project]
name = "utils"
version = "0.1.0"
description = "System utility tools and live metrics for Insight UI Storybook, including a WebSocket-based server for real-time disk, memory, and system status monitoring."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.0.0",
    "websockets>=15.0.1",
]